--- a/toml_to_json/accounts_loggroup_index.toml
+++ b/toml_to_json/accounts_loggroup_index.toml
@@ -1,4 +1,4 @@
-# test comment
+# test comment 2
 
 [csls_heartbeat]
 "csls_data_stream_dev"                                                     = { index = "test_data"                      , sourcetype = "csls_data_stream_dev"                                               }
