--- a/.github/workflows/toml_to_json_test.yml
+++ b/.github/workflows/toml_to_json_test.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Test Splunk indexes in toml file
         working-directory: ./toml_to_json
         run: python toml_to_json.py
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Commit converted file
+        uses: stefanzweifel/git-auto-commit-action@v4
       	with:
         	commit_message: Converted TOML to JSON  
 
